오브젝트들 현재 위치한 구역이 활성화되었을 시에만 활성화시키도록 변경 / 엘리베이터 기본

--- a/UnitTest/UnitTest.vcxproj
+++ b/UnitTest/UnitTest.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="Character\Enemy.h" />
     <ClInclude Include="Character\SoldierSample.h" />
+    <ClInclude Include="GameObjects\Elevator.h" />
     <ClInclude Include="GameObjects\Throwable\Throwable.h" />
     <ClInclude Include="GameObjects\Bullet\Bullet.h" />
     <ClInclude Include="Character\Animations.h" />
@@ -175,6 +176,7 @@
   <ItemGroup>
     <ClCompile Include="Character\Enemy.cpp" />
     <ClCompile Include="Character\SoldierSample.cpp" />
+    <ClCompile Include="GameObjects\Elevator.cpp" />
     <ClCompile Include="GameObjects\Throwable\Throwable.cpp" />
     <ClCompile Include="GameObjects\Bullet\Bullet.cpp" />
     <ClCompile Include="Character\Animations.cpp" />
