--- a/UnitTest/UnitTest.vcxproj
+++ b/UnitTest/UnitTest.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="Character\Animations.h" />
     <ClInclude Include="Character\Character.h" />
     <ClInclude Include="Character\Agent.h" />
+    <ClInclude Include="Utilities\EnemyAI\EnemyAI.h" />
     <ClInclude Include="Utilities\GameManager.h" />
     <ClInclude Include="Utilities\Gun\Gun.h" />
     <ClInclude Include="Utilities\Input\Input.h" />
@@ -162,7 +163,6 @@
     <ClInclude Include="Utilities\Decoration.h" />
     <ClInclude Include="Utilities\Game.h" />
     <ClInclude Include="Utilities\GameWorld.h" />
-    <ClInclude Include="Utilities\LevelEditor\LevelEditor.h" />
     <ClInclude Include="Utilities\Movements\PlayerMovement.h" />
     <ClInclude Include="Utilities\Movements\ThrowableMovement.h" />
     <ClInclude Include="Level\Background.h" />
@@ -182,13 +182,13 @@
     <ClCompile Include="Character\Animations.cpp" />
     <ClCompile Include="Character\Character.cpp" />
     <ClCompile Include="Character\Agent.cpp" />
+    <ClCompile Include="Utilities\EnemyAI\EnemyAI.cpp" />
     <ClCompile Include="Utilities\GameManager.cpp" />
     <ClCompile Include="Utilities\Gun\Gun.cpp" />
     <ClCompile Include="Utilities\Input\Input.cpp" />
     <ClCompile Include="Utilities\Combat\PlayerCombat.cpp" />
     <ClCompile Include="Utilities\Game.cpp" />
     <ClCompile Include="Utilities\GameWorld.cpp" />
-    <ClCompile Include="Utilities\LevelEditor\LevelEditor.cpp" />
     <ClCompile Include="Utilities\Movements\PlayerMovement.cpp" />
     <ClCompile Include="Utilities\Movements\ThrowableMovement.cpp" />
     <ClCompile Include="Level\Background.cpp" />
