--- a/UnitTest/UnitTest.vcxproj.filters
+++ b/UnitTest/UnitTest.vcxproj.filters
@@ -23,9 +23,9 @@
     <ClInclude Include="Utilities\Movements\ThrowableMovement.h" />
     <ClInclude Include="Utilities\Gun\Gun.h" />
     <ClInclude Include="Utilities\Movements\Movement.h" />
-    <ClInclude Include="Utilities\LevelEditor\LevelEditor.h" />
     <ClInclude Include="Utilities\GameManager.h" />
     <ClInclude Include="GameObjects\Elevator.h" />
+    <ClInclude Include="Utilities\EnemyAI\EnemyAI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Program.cpp" />
@@ -48,9 +48,9 @@
     <ClCompile Include="Utilities\Movements\ThrowableMovement.cpp" />
     <ClCompile Include="Utilities\Gun\Gun.cpp" />
     <ClCompile Include="Utilities\Movements\Movement.cpp" />
-    <ClCompile Include="Utilities\LevelEditor\LevelEditor.cpp" />
     <ClCompile Include="Utilities\GameManager.cpp" />
     <ClCompile Include="GameObjects\Elevator.cpp" />
+    <ClCompile Include="Utilities\EnemyAI\EnemyAI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="Framework.lib" />
