--- a/UnitTest/imgui.ini
+++ b/UnitTest/imgui.ini
@@ -49,7 +49,7 @@ Size=102,62
 Collapsed=0
 
 [Window][Game]
-Pos=933,10
+Pos=890,22
 Size=340,109
 Collapsed=0
 
@@ -80,19 +80,19 @@ Size=85,52
 Collapsed=0
 
 [Window][State]
-Pos=1012,515
+Pos=1016,518
 Size=252,77
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Combat]
-Pos=1012,361
+Pos=1016,364
 Size=252,152
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Movement]
-Pos=1012,594
+Pos=1016,597
 Size=252,78
 Collapsed=0
 DockId=0x00000005,0
@@ -130,12 +130,17 @@ Size=113,46
 Collapsed=0
 
 [Window][GameManager]
-Pos=19,19
-Size=248,71
+Pos=-2,342
+Size=248,76
+Collapsed=0
+
+[Window][Room]
+Pos=18,31
+Size=260,94
 Collapsed=0
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=1012,361 Size=252,311 Split=Y
+DockNode      ID=0x00000001 Pos=1016,364 Size=252,311 Split=Y
   DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=252,231 Split=Y
     DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=252,152 HiddenTabBar=1 SelectedTab=0x8AFDE6AE
     DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=252,77 HiddenTabBar=1 SelectedTab=0x6252FDFF
